--- a/Aula_3_Numpy_Matrizes.ipynb
+++ b/Aula_3_Numpy_Matrizes.ipynb
@@ -2021,12 +2021,128 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "v0 = np.array([0])\n",
+        "v1 = np.zeros([1,10],int)\n",
+        "v2 = np.zeros([5,5],int)\n",
+        "v3 = np.zeros([2,2,2],int)\n",
+        "print(v0)\n",
+        "print(v1)\n",
+        "print(v2)\n",
+        "print(v3)"
+      ],
+      "metadata": {
+        "id": "XUWXUeVM2ntH",
+        "outputId": "5bbed77c-068a-42ab-9956-dc45b336e416",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0]\n",
+            "[[0 0 0 0 0 0 0 0 0 0]]\n",
+            "[[0 0 0 0 0]\n",
+            " [0 0 0 0 0]\n",
+            " [0 0 0 0 0]\n",
+            " [0 0 0 0 0]\n",
+            " [0 0 0 0 0]]\n",
+            "[[[0 0]\n",
+            "  [0 0]]\n",
+            "\n",
+            " [[0 0]\n",
+            "  [0 0]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "XUWXUeVM2ntH"
+        "id": "ZYv4jIO9eIGr",
+        "outputId": "a8fc8882-a4f9-4fd4-a5df-cc1dae5e2773",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QwBMln1rec9r",
+        "outputId": "9a6df2a2-a609-4b67-cf24-87a292de49e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "vzlfLB2SgRso",
+        "outputId": "02734407-dfe0-4760-e5e0-d8dbf932a4c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[0, 0],\n",
+              "        [0, 0]],\n",
+              "\n",
+              "       [[0, 0],\n",
+              "        [0, 0]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2039,12 +2155,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "m10 = np.random.randint(0,255,size=(10,10),dtype='uint8')\n",
+        "m10"
+      ],
       "metadata": {
-        "id": "qzpC06fJ2n6J"
+        "id": "qzpC06fJ2n6J",
+        "outputId": "6aaf4145-bb9a-4841-bff0-7439ed9ff9df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[119,  40, 184, 192,  77, 202, 140, 185,  55, 106],\n",
+              "       [ 78, 201, 234,  74, 239, 148, 153, 204, 230, 213],\n",
+              "       [211,  45,   0,  71, 134,  77, 181,  11, 110,  55],\n",
+              "       [195,  55,   5, 139, 253, 181, 119, 217,  19, 205],\n",
+              "       [ 15,  48, 148,  86, 220, 189,  74,  48, 115, 123],\n",
+              "       [213, 220,  36,  41,  58, 114,  23, 182,  25, 152],\n",
+              "       [110, 159, 182, 148, 161, 178,  86,  30, 153, 185],\n",
+              "       [214, 188, 214,  97,  68, 111, 129, 147, 190, 132],\n",
+              "       [213, 215, 134,   4, 227,  55,  95,  56, 178, 138],\n",
+              "       [115, 221,  61, 179, 175, 122, 222, 188,  16, 192]], dtype=uint8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2057,12 +2200,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = [-1,10,7]\n",
+        "b = [6,4,8]\n",
+        "c= [-2,-4,9]\n",
+        "\n",
+        "matriz = np.array(a+b+c)\n",
+        "matriz2 = matriz.reshape((3,3))\n",
+        "matriz2"
+      ],
       "metadata": {
-        "id": "jAOzcvCwmfPX"
+        "id": "jAOzcvCwmfPX",
+        "outputId": "c55918c4-6dc8-451f-89d8-6b00cce2306d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-1, 10,  7],\n",
+              "       [ 6,  4,  8],\n",
+              "       [-2, -4,  9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
